--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,29 +5,17 @@ services:
     build: ./service_1
     ports:
       - "8001:8001"
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8001"]
-      interval: 10s
-      timeout: 5s
-      retries: 3
 
   service_2:
     build: ./service_2
     ports:
       - "8002:8002"
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8002"]
-      interval: 10s
-      timeout: 5s
-      retries: 3
 
   nginx:
     build: ./nginx
     ports:
       - "8080:80"
     depends_on:
-      service_1:
-        condition: service_healthy
-      service_2:
-        condition: service_healthy
+      - service_1
+      - service_2
 
