--- a/service_2/Dockerfile
+++ b/service_2/Dockerfile
@@ -3,7 +3,8 @@ FROM python:3.11-slim
 WORKDIR /app
 COPY app.py .
 
-RUN pip install fastapi uvicorn
+RUN pip install --no-cache-dir flask
 
 EXPOSE 8002
-CMD ["uvicorn", "app:app", "--host", "0.0.0.0", "--port", "8002"]
+CMD ["python", "app.py"]
+
